force-app/main/default/objects/Property_Value__c/Property_Value__c.object-meta.xml
<CustomObject>
    <label>Property Value</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Property Value ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>