force-app/main/default/objects/Property_Value__c/fields/CESContract__c.field-meta.xml
<CustomField>
    <fullName>CESContract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CES Contract</label>
    <referenceTo>CESContract__c</referenceTo>
    <relationshipLabel>Property Values</relationshipLabel>
    <relationshipName>Property_Values</relationshipName>
    <type>Lookup</type>
</CustomField>