force-app/main/default/objects/Property_Value__c/fields/Contract_Office_Code__c.field-meta.xml
<CustomField>
    <fullName>Contract_Office_Code__c</fullName>
    <formula>CESContract__r.CES_Office_Code__c</formula>
    <label>Contract Office Code</label>
    <type>Text</type>
</CustomField>