force-app/main/default/objects/Property_Value__c/fields/Managed_by_External_System__c.field-meta.xml
<CustomField>
    <fullName>Managed_by_External_System__c</fullName>
    <formula>AND(Property__r.LIVE_Managed_by_External_System__c, Premise_Office_Code__c == &#39;LIVE&#39;)</formula>
    <label>Managed by External System</label>
    <type>Checkbox</type>
</CustomField>