force-app/main/default/objects/Property_Value__c/fields/Numeric_Value__c.field-meta.xml
<CustomField>
    <fullName>Numeric_Value__c</fullName>
    <label>Numeric Value</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>