force-app/main/default/objects/Property_Value__c/fields/Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Pipeline__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pipeline</label>
    <referenceTo>Pipeline__c</referenceTo>
    <relationshipLabel>Property Values</relationshipLabel>
    <relationshipName>Property_Values</relationshipName>
    <type>Lookup</type>
</CustomField>