force-app/main/default/objects/Property_Value__c/fields/Premise__c.field-meta.xml
<CustomField>
    <fullName>Premise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Premise</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Premises__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>C&amp;I Premise Gas</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Premises__c</referenceTo>
    <relationshipLabel>Property Values</relationshipLabel>
    <relationshipName>Property_Values</relationshipName>
    <type>Lookup</type>
</CustomField>