force-app/main/default/objects/Property_Value__c/fields/Premise_Safari_Key__c.field-meta.xml
<CustomField>
    <fullName>Premise_Safari_Key__c</fullName>
    <formula>Premise__r.Safari_Premise_Key_Formula__c</formula>
    <label>Premise Safari Key</label>
    <type>Text</type>
</CustomField>