force-app/main/default/objects/Property_Value__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <label>Property</label>
    <referenceTo>Date_Effective_Property__c</referenceTo>
    <relationshipLabel>Property Values</relationshipLabel>
    <relationshipName>Property_Values</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>