force-app/main/default/objects/Property_Value__c/fields/Rate_Class__c.field-meta.xml
<CustomField>
    <fullName>Rate_Class__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rate Class</label>
    <referenceTo>LDC_Rate_Class__c</referenceTo>
    <relationshipLabel>Property Values</relationshipLabel>
    <relationshipName>Property_Values</relationshipName>
    <type>Lookup</type>
</CustomField>