force-app/main/default/objects/Property_Value__c/fields/Safari_Key_Formula__c.field-meta.xml
<CustomField>
    <fullName>Safari_Key_Formula__c</fullName>
    <formula>IF( FIND(&#39;-&#39;, Safari_Key__c ) = 0
  , NULL
  ,  MID( Safari_Key__c , FIND(&#39;-&#39;, Safari_Key__c ) + 1, LEN( Safari_Key__c ) - FIND(&#39;-&#39;, Safari_Key__c ) + 1) 
)</formula>
    <label>Safari Key Formula</label>
    <type>Text</type>
</CustomField>