force-app/main/default/objects/Property_Value__c/fields/Sync_By_Primary_Object__c.field-meta.xml
<CustomField>
    <fullName>Sync_By_Primary_Object__c</fullName>
    <defaultValue>false</defaultValue>
    <description>is this record synced to Safari via its primary object?</description>
    <inlineHelpText>is this record synced to Safari via its primary object?</inlineHelpText>
    <label>Sync By Primary Object</label>
    <type>Checkbox</type>
</CustomField>