force-app/main/default/objects/Property_Value__c/fields/Sync_MPLS__c.field-meta.xml
<CustomField>
    <fullName>Sync_MPLS__c</fullName>
    <formula>Property__r.Sync_MPLS__c</formula>
    <label>Sync MPLS</label>
    <type>Checkbox</type>
</CustomField>