force-app/main/default/objects/Property_Value__c/fields/Sync_STL__c.field-meta.xml
<CustomField>
    <fullName>Sync_STL__c</fullName>
    <formula>Property__r.Sync_STL__c</formula>
    <label>Sync STL</label>
    <type>Checkbox</type>
</CustomField>