force-app/main/default/objects/Property_Value__c/fields/Utility_Code__c.field-meta.xml
<CustomField>
    <fullName>Utility_Code__c</fullName>
    <formula>Premise__r.TDSP_Lookup__r.Utility_Code__c</formula>
    <label>Utility Code</label>
    <type>Text</type>
</CustomField>