force-app/main/default/objects/Property_Value__c/fields/Utility_Commodity_ID__c.field-meta.xml
<CustomField>
    <fullName>Utility_Commodity_ID__c</fullName>
    <formula>Premise__r.Utility_Commodity_ID__c</formula>
    <label>Utility Commodity ID</label>
    <type>Text</type>
</CustomField>