force-app/main/default/objects/Property_Value__c/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <formula>IF(NOT(ISBLANK(Consultant__c))
  , Consultant__r.Name
  , IF(NOT(ISBLANK(Text_Value__c))
      , Text_Value__c 
      , IF(NOT(ISBLANK(Numeric_Value__c))
          , TEXT(Numeric_Value__c)
          , IF(NOT(ISBLANK(Rate_Class__c))
              , Rate_Class__r.Name_Key__c 
              , IF(NOT(ISBLANK(Pipeline__c))
                  , Pipeline__r.Pipeline_Code__c
                  , IF(Checkbox_Value__c
                      , &#39;Yes&#39;
                      , null
                    )
                )
            )
        )
    )
)</formula>
    <label>Value</label>
    <type>Text</type>
</CustomField>